--- a/package.json
+++ b/package.json
@@ -157,6 +157,7 @@
         "mobx": "^5.15.4",
         "mobx-react": "^6.2.2",
         "moment": "^2.29.4",
+        "monaco-editor": "^0.30.1",
         "monaco-editor-webpack-plugin": "^5.0.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.1",
@@ -164,6 +165,9 @@
         "react-monaco-editor": "^0.45.0",
         "react-router": "^5.2.0",
         "react-router-config": "^5.1.1",
-        "react-router-dom": "^5.2.0"
+        "react-router-dom": "^5.2.0",
+        "tiklab-eam-ui": "^1.0.1",
+        "tiklab-enable-axios-ce": "^1.0.1",
+        "tiklab-plugin-ui": "^1.0.1"
     }
 }
