--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "mobx": "^5.15.4",
         "mobx-react": "^6.2.2",
         "moment": "^2.29.1",
+        "monaco-editor": "^0.30.1",
         "react": "^17.0.2",
         "react-codemirror2": "^7.2.1",
         "react-dom": "^17.0.1",
