--- a/package.json
+++ b/package.json
@@ -104,11 +104,12 @@
         "json-server": "^0.16.3",
         "mini-css-extract-plugin": "^1.3.1",
         "mockjs": "^1.1.0",
-        "monaco-editor-webpack-plugin": "^5.0.0",
         "monaco-editor-esm-webpack-plugin": "^2.0.0",
+        "monaco-editor-webpack-plugin": "^5.0.0",
         "ncp": "^2.0.0",
         "node-forge": "*",
         "nodemon": "^2.0.6",
+        "node-sass": "^5.0.0",
         "optimize-css-assets-webpack-plugin": "^5.0.4",
         "package-check-version": "^1.0.1",
         "postcss": "^8.1.7",
@@ -137,7 +138,7 @@
         "style-loader": "^2.0.0",
         "svg-sprite-loader": "^6.0.11",
         "svgo-loader": "^3.0.1",
-        "terser-webpack-plugin": "^5.3.6",
+        "terser-webpack-plugin": "^1.4.5",
         "thread-loader": "^3.0.4",
         "uglifyjs-webpack-plugin": "^2.2.0",
         "url-loader": "^4.1.1",
