--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
         "json-server": "^0.16.3",
         "mini-css-extract-plugin": "^1.3.1",
         "mockjs": "^1.1.0",
+        "monaco-editor-locales-plugin": "0.0.3",
         "monaco-editor-webpack-plugin": "^5.0.0",
         "ncp": "^2.0.0",
         "node-forge": "*",
