--- a/package.json
+++ b/package.json
@@ -163,6 +163,7 @@
         "moment": "^2.29.4",
         "monaco-editor": "^0.30.1",
         "react": "^17.0.2",
+        "react-diff-viewer": "^3.1.1",
         "react-dom": "^17.0.1",
         "react-i18next": "^11.7.3",
         "react-monaco-editor": "^0.45.0",
