--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
         "moment": "^2.29.1",
         "monaco-editor": "^0.30.1",
         "react": "^17.0.2",
-        "react-codemirror2": "^7.2.1",
-        "react-dom": "^17.0.1",
+        "react-diff-viewer": "^3.1.1",
+        "react-dom": "^17.0.2",
         "react-i18next": "^11.7.3",
         "react-router": "^5.2.0",
         "react-router-config": "^5.1.1",
@@ -154,6 +154,8 @@
         "@ant-design/icons": "^4.3.0",
         "antd": "^4.15.2",
         "axios": "^0.21.0",
+        "classnames": "^2.2.6",
+        "diff-match-patch": "^1.0.5",
         "echarts": "^5.3.3",
         "i18next": "^19.8.4",
         "i18next-browser-languagedetector": "^6.0.1",
@@ -164,12 +166,15 @@
         "monaco-editor": "^0.30.1",
         "react": "^17.0.2",
         "react-diff-viewer": "^3.1.1",
-        "react-dom": "^17.0.1",
+        "react-dom": "^17.0.2",
         "react-i18next": "^11.7.3",
         "react-monaco-editor": "^0.45.0",
         "react-router": "^5.2.0",
         "react-router-config": "^5.1.1",
         "react-router-dom": "^5.2.0",
+        "slate": "^0.81.0",
+        "slate-history": "^0.65.3",
+        "slate-react": "^0.81.0",
         "tiklab-core-ui": "^1.0.1",
         "tiklab-eam-ui": "^1.0.1",
         "tiklab-enable-axios-ce": "^1.0.1",
@@ -179,6 +184,7 @@
         "tiklab-plugin-ui": "^1.0.1",
         "tiklab-todotask-ui": "^1.0.1",
         "tiklab-user-ui": "^1.0.1",
-        "tiklab-widget-ui": "^1.0.1"
+        "tiklab-widget-ui": "^1.0.1",
+        "wangeditor": "^4.7.15"
     }
 }
