--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "es"
     ],
     "scripts": {
-        "start": "cross-env NODE_ENV=local CUSTOM_ENV=local webpack-dev-server --progress --config webpack.dev.js ",
+        "startLoc": "cross-env NODE_ENV=local CUSTOM_ENV=local webpack-dev-server --progress --config webpack.dev.js ",
+        "start": "cross-env NODE_ENV=dev CUSTOM_ENV=dev webpack-dev-server --progress --config webpack.dev.js ",
         "prod": "cross-env NODE_ENV=production CUSTOM_ENV=prod webpack --config webpack.prod.js",
         "dev": "cross-env NODE_ENV=dev CUSTOM_ENV=dev webpack-dev-server --progress  --config webpack.dev.js --open",
         "build": "rimraf es/* && ./node_modules/.bin/babel src --copy-files --extensions .js --out-dir es/module && ncp ./src/ui.js es/index.js && ncp README.md es/README.md && ncp package.publish.json es/package.json",
@@ -40,7 +41,7 @@
         "i18next-http-backend": "^1.0.21",
         "mobx": "^5.15.4",
         "mobx-react": "^6.2.2",
-        "moment": "^2.29.1",
+        "moment": "^2.29.4",
         "monaco-editor": "^0.30.1",
         "react": "^17.0.2",
         "react-diff-viewer": "^3.1.1",
