提交记录文件内容显示

--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
         "@ant-design/icons": "^4.3.0",
         "antd": "^4.15.2",
         "axios": "^0.21.0",
-        "codemirror": "^5.65.4",
         "echarts": "^5.3.3",
         "i18next": "^19.8.4",
         "i18next-browser-languagedetector": "^6.0.1",
@@ -183,6 +182,8 @@
         "tiklab-message-ui": "^1.0.1",
         "tiklab-oplog-ui": "^1.0.1",
         "tiklab-plugin-ui": "^1.0.1",
+        "tiklab-privilege-ui": "^1.0.1",
+        "tiklab-slate-ui": "^1.0.0",
         "tiklab-todotask-ui": "^1.0.1",
         "tiklab-user-ui": "^1.0.1",
         "tiklab-widget-ui": "^1.0.1",
