提交文件，差异高亮，代码高亮

--- a/package.json
+++ b/package.json
@@ -155,11 +155,12 @@
         "antd": "^4.15.2",
         "axios": "^0.21.0",
         "classnames": "^2.2.6",
-        "diff-match-patch": "^1.0.5",
         "echarts": "^5.3.3",
+        "highlight.js": "^11.7.0",
         "i18next": "^19.8.4",
         "i18next-browser-languagedetector": "^6.0.1",
         "i18next-http-backend": "^1.0.21",
+        "marked": "^4.2.12",
         "mobx": "^5.15.4",
         "mobx-react": "^6.2.2",
         "moment": "^2.29.4",
