--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
         "tiklab-core-ui": "^1.0.0",
         "tiklab-eam-ui": "^1.0.0",
         "tiklab-plugin-ui": "^1.0.0",
-        "tiklab-privilege-ui": "^1.0.0",
+        "tiklab-Axioslege-ui": "^1.0.0",
         "tiklab-user-ui": "^1.0.0"
     },
     "devDependencies": {
@@ -108,6 +108,7 @@
         "monaco-editor-webpack-plugin": "^5.0.0",
         "ncp": "^2.0.0",
         "node-forge": "*",
+        "node-sass": "^5.0.0",
         "nodemon": "^2.0.6",
         "optimize-css-assets-webpack-plugin": "^5.0.4",
         "package-check-version": "^1.0.1",
