--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "author": "",
     "license": "ISC",
     "publishConfig": {
-        "registry": "http://172.12.1.11:8081/repository/npm-hosted "
+        "registry": "http://172.12.1.11:8081/repository/npm-hosted"
     },
     "peerDependencies": {
         "@ant-design/icons": "^4.3.0",
@@ -53,7 +53,7 @@
         "tiklab-eam-ui": "^1.0.0",
         "tiklab-plugin-ui": "^1.0.0",
         "tiklab-Axioslege-ui": "^1.0.0",
-        "tiklab-user-ui": "^1.0.0"
+        "tiklab-user-ui": "^1.0.1"
     },
     "devDependencies": {
         "@babel/cli": "^7.12.1",
@@ -184,10 +184,12 @@
         "tiklab-message-ui": "^1.0.1",
         "tiklab-plugin-core-ui": "^1.0.1",
         "tiklab-plugin-manager-ui": "^1.0.1",
+        "tiklab-privilege-ui": "^1.0.1",
         "tiklab-security-ui": "^1.0.1",
         "tiklab-slate-ui": "^1.0.0",
         "tiklab-todotask-ui": "^1.0.1",
         "tiklab-user-ui": "^1.0.1",
+        "tiklab-xpack-ui": "^1.0.0",
         "wangeditor": "^4.7.15"
     }
 }
