--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "description": "tiklab xcode",
     "main": "es/src/ui.js",
-    "module": "es/index.js",
+    "module": "es/src/ui.js",
     "files": [
         "es"
     ],
@@ -12,9 +12,9 @@
         "start": "cross-env NODE_ENV=dev CUSTOM_ENV=dev webpack-dev-server --progress --config webpack.dev.js ",
         "prod": "cross-env NODE_ENV=production CUSTOM_ENV=prod webpack --config webpack.prod.js",
         "dev": "cross-env NODE_ENV=dev CUSTOM_ENV=dev webpack-dev-server --progress  --config webpack.dev.js --open",
-        "build": "rimraf es/* && ./node_modules/.bin/babel src --copy-files --extensions .js --out-dir es/module && ncp ./src/ui.js es/index.js && ncp README.md es/README.md && ncp package.publish.json es/package.json",
+        "build": "rimraf es/* && ./node_modules/.bin/babel src --copy-files  --extensions .js --out-dir es && ncp ./src/ui.js es/dist.js && ncp README.md es/README.md && ncp package.publish.json es/package.json",
+        "build:prod": "npm run build:esm && npm run build:css",
         "build:dev": "npm run build:dev:esm && npm run build:dev:cjs && npm run build:umd && npm run build:css",
-        "build:prod": "npm run build:esm && npm run build:cjs && npm run build:umd",
         "build:css": "cd scripts && gulp compile",
         "build:dev:esm": "rimraf es && cross-env NODE_ENV=development BABEL_ENV=esm rollup -c",
         "build:esm": "rimraf es && cross-env NODE_ENV=production BABEL_ENV=esm rollup -c",
@@ -28,32 +28,7 @@
     "author": "",
     "license": "ISC",
     "publishConfig": {
-        "registry": "http://172.12.1.11:8081/repository/npm-hosted"
-    },
-    "peerDependencies": {
-        "@ant-design/icons": "^4.3.0",
-        "antd": "^4.15.2",
-        "axios": "^0.21.0",
-        "echarts": "^5.3.3",
-        "i18next": "^19.8.4",
-        "i18next-browser-languagedetector": "^6.0.1",
-        "i18next-http-backend": "^1.0.21",
-        "mobx": "^5.15.4",
-        "mobx-react": "^6.2.2",
-        "moment": "^2.29.4",
-        "monaco-editor": "^0.30.1",
-        "react": "^17.0.2",
-        "react-diff-viewer": "^3.1.1",
-        "react-dom": "^17.0.2",
-        "react-i18next": "^11.7.3",
-        "react-router": "^5.2.0",
-        "react-router-config": "^5.1.1",
-        "react-router-dom": "^5.2.0",
-        "tiklab-core-ui": "^1.0.0",
-        "tiklab-eam-ui": "^1.0.0",
-        "tiklab-plugin-ui": "^1.0.0",
-        "tiklab-Axioslege-ui": "^1.0.0",
-        "tiklab-user-ui": "^1.0.1"
+        "registry": "http://172.13.1.11:8081/repository/npm-hosted"
     },
     "devDependencies": {
         "@babel/cli": "^7.12.1",
@@ -187,9 +162,59 @@
         "tiklab-privilege-ui": "^1.0.1",
         "tiklab-security-ui": "^1.0.1",
         "tiklab-slate-ui": "^1.0.0",
+        "tiklab-teamwire-ui": "^1.0.0",
         "tiklab-todotask-ui": "^1.0.1",
         "tiklab-user-ui": "^1.0.1",
-        "tiklab-xpack-ui": "^1.0.0",
         "wangeditor": "^4.7.15"
+    },
+    "peerDependencies": {
+        "@ant-design/icons": "^4.3.0",
+        "antd": "^4.15.2",
+        "axios": "^0.21.0",
+        "classnames": "^2.2.6",
+        "diff-match-patch": "^1.0.5",
+        "i18next": "^19.8.4",
+        "i18next-browser-languagedetector": "^6.0.1",
+        "i18next-http-backend": "^1.0.21",
+        "echarts": "^5.3.3",
+        "highlight.js": "^11.7.0",
+        "mobx": "^5.15.4",
+        "style-loader": "^2.0.0",
+        "mobx-react": "^6.2.2",
+        "moment": "^2.29.4",
+        "monaco-editor": "^0.30.1",
+        "react": "^17.0.2",
+        "react-diff-viewer": "^3.1.1",
+        "react-dom": "^17.0.2",
+        "react-i18next": "^11.7.3",
+        "react-monaco-editor": "^0.45.0",
+        "react-router": "^5.2.0",
+        "react-router-config": "^5.1.1",
+        "react-router-dom": "^5.2.0",
+        "css-loader": "^3.6.0",
+        "slate": "^0.81.0",
+        "slate-history": "^0.65.3",
+        "slate-react": "^0.81.0",
+        "tiklab-core-cloud-ui": "^1.0.1",
+        "tiklab-core-ui": "^1.0.1",
+        "tiklab-eam-cloud-ui": "^1.0.1",
+        "tiklab-eam-ui": "^1.0.1",
+        "tiklab-licence-cloud-ui": "^1.0.0",
+        "tiklab-licence-ui": "^1.0.1",
+        "tiklab-message-ui": "^1.0.1",
+        "tiklab-plugin-core-ui": "^1.0.1",
+        "tiklab-plugin-ui": "^1.0.1",
+        "tiklab-privilege-ui": "^1.0.1",
+        "tiklab-security-ui": "^1.0.1",
+        "tiklab-slate-ui": "^1.0.0",
+        "tiklab-todotask-ui": "^1.0.1",
+        "tiklab-user-ui": "^1.0.1",
+        "tiklab-widget-ui": "^1.0.1",
+        "tiklab-integration-ui": "^1.0.1",
+        "tiklab-plugin-manager-ui": "^1.0.1",
+        "postcss-loader": "^4.0.4",
+        "wangeditor": "^4.7.15",
+        "sass-loader": "^10.1.1",
+        "tiklab-xcode-ui": "^1.0.0"
     }
 }
