--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "tiklab-xcode-ui",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "tiklab xcode",
     "main": "es/src/ui.js",
     "module": "es/src/ui.js",
@@ -9,14 +9,14 @@
     ],
     "scripts": {
         "xcode-ce-start": "cross-env NODE_ENV=development CUSTOM_ENV=local webpack-dev-server --progress --config webpack.dev.js",
-        "prod": "cross-env NODE_ENV=production CUSTOM_ENV=prod webpack --config webpack.prod.js",
         "dev": "cross-env NODE_ENV=dev CUSTOM_ENV=dev webpack-dev-server --progress  --config webpack.dev.js --open",
         "build": "rimraf es/* && ./node_modules/.bin/babel src --copy-files --extensions .js --out-dir es/module && ncp ./src/ui.js es/index.js && ncp README.md es/README.md",
         "build:dev": "npm run build:dev:esm && npm run build:dev:cjs && npm run build:umd && npm run build:css",
-        "build:prod": "npm run build:esm && npm run build:css",
+        "prod:webpack": "cross-env NODE_ENV=production CUSTOM_ENV=prod webpack --config webpack.prod.js",
+        "build:rollup": "npm run build:esm && npm run build:css",
+        "build:esm": "rimraf es && cross-env NODE_ENV=production BABEL_ENV=esm rollup -c",
         "build:css": "cd scripts && gulp compile",
         "build:dev:esm": "rimraf es && cross-env NODE_ENV=development BABEL_ENV=esm rollup -c",
-        "build:esm": "rimraf es && cross-env NODE_ENV=production BABEL_ENV=esm rollup -c",
         "build:dev:cjs": "rimraf cjs && cross-env NODE_ENV=development BABEL_ENV=cjs rollup -c",
         "build:cjs": "rimraf lib && cross-env NODE_ENV=production BABEL_ENV=cjs rollup -c",
         "build:umd": "rimraf dist && cross-env BABEL_ENV=umd rollup -c"
@@ -27,7 +27,7 @@
     "author": "",
     "license": "ISC",
     "publishConfig": {
-        "registry": "http://172.13.1.11:8081/repository/npm-hosted"
+        "registry": "http://172.13.1.24:8080/repository/npm-hosted"
     },
     "devDependencies": {
         "@babel/cli": "^7.12.1",
@@ -78,7 +78,7 @@
         "json-server": "^0.16.3",
         "mini-css-extract-plugin": "^1.3.1",
         "mockjs": "^1.1.0",
-        "monaco-editor-locales-plugin": "0.0.3",
+        "monaco-editor-locales-plugin": "^0.0.3",
         "monaco-editor-webpack-plugin": "^5.0.0",
         "ncp": "^2.0.0",
         "node-forge": "*",
@@ -107,8 +107,8 @@
         "rollup-plugin-uglify": "^6.0.4",
         "sass-loader": "^10.1.1",
         "sass-resources-loader": "^2.2.1",
-        "single-spa": "5.9.2",
-        "single-spa-react": "4.1.1",
+        "single-spa": "^5.9.2",
+        "single-spa-react": "^4.1.1",
         "style-loader": "^2.0.0",
         "svg-sprite-loader": "^6.0.11",
         "svgo-loader": "^3.0.1",
@@ -147,13 +147,12 @@
         "react-router": "^5.2.0",
         "react-router-config": "^5.1.1",
         "react-router-dom": "^5.2.0",
+        "rollup-plugin-url": "^3.0.1",
         "slate": "^0.81.0",
         "slate-history": "^0.65.3",
         "slate-react": "^0.81.0",
         "tiklab-core-ui": "^1.0.1",
         "tiklab-eam-ui": "^1.0.1",
-        "tiklab-enable-axios-ce": "^1.0.1",
-        "tiklab-integration-ui": "^1.0.1",
         "tiklab-licence-ui": "^1.0.1",
         "tiklab-message-ui": "^1.0.1",
         "tiklab-plugin-core-ui": "^1.0.1",
@@ -197,7 +196,6 @@
         "tiklab-core-ui": "^1.0.1",
         "tiklab-eam-cloud-ui": "^1.0.1",
         "tiklab-eam-ui": "^1.0.1",
-        "tiklab-integration-ui": "^1.0.1",
         "tiklab-licence-cloud-ui": "^1.0.0",
         "tiklab-licence-ui": "^1.0.1",
         "tiklab-message-ui": "^1.0.1",
