依赖包文件修改

--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
         "mobx-react": "^6.2.2",
         "moment": "^2.29.4",
         "monaco-editor": "^0.30.1",
-        "npm": "^10.5.2",
         "react": "^17.0.2",
         "react-diff-viewer": "^3.1.1",
         "react-dom": "^17.0.2",
@@ -65,6 +64,7 @@
         "tiklab-licence-ui": "^1.0.3",
         "tiklab-message-extension-ui": "^1.0.3",
         "tiklab-message-ui": "^1.0.3",
+        "tiklab-postin-client-ui": "^1.0.0",
         "tiklab-privilege-ui": "^1.0.3",
         "tiklab-security-ui": "^1.0.3",
         "tiklab-user-extension-ui": "^1.0.3",
